# capns-interop-tests

./: .gitignore  CAP_SPEC.md  Makefile  README.md  pyproject.toml  pyproject.toml.wstemplate  requirements.txt  show_throughput_matrix.py  test_rust_stack.sh  version.txt
src/capdag_interop/: __init__.py
src/capdag_interop/framework/: __init__.py  frame_test_helper.py  relay_host_server.py  relay_switch_helper.py  router_process.py  test_topology.py
src/capdag_interop/hosts/go-relay/: go.mod  go.sum  main.go
src/capdag_interop/hosts/rust-relay/: Cargo.toml
src/capdag_interop/hosts/swift-relay/: Package.resolved  Package.swift
src/capdag_interop/plugins/go/: go.mod  main.go
src/capdag_interop/plugins/python/: plugin.py
src/capdag_interop/plugins/rust/: Cargo.toml
src/capdag_interop/plugins/rust/src/: main.rs
src/capdag_interop/plugins/swift/: Package.swift  debug_manifest.swift  test_manifest.swift
src/capdag_interop/routers/rust/: Cargo.toml
src/capdag_interop/scenarios/: __init__.py  base.py  basic.py  bidirectional.py  chunking.py  error_handling.py  heartbeat.py  performance.py  stream_multiplexing.py  streaming.py
tests/: __init__.py  conftest.py  test_basic_interop.py  test_bidirectional_interop.py  test_chunking_interop.py  test_error_interop.py  test_filepath_interop.py  test_heartbeat_interop.py  test_manifest_validation.py  test_multi_host_interop.py  test_multi_master_routing.py  test_performance.py  test_protocol_v2_frames.py  test_relay_interop.py  test_stream_multiplexing_interop.py  test_streaming_interop.py
(+6 files in other folders)
