[package]
name = "capdag-interop-plugin-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "capdag-interop-plugin-rust"
path = "src/main.rs"

[dependencies]
capdag = { path = "../../../../../capdag" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
ciborium = "0.2"
